# GitIZI

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml  publish.yml  release.yml
gitizi/: __init__.py  cli.py  exceptions.py  util.py
gitizi/ai/: __init__.py
gitizi/ai/context/: __init__.py  squash.py
tests/: __init__.py  test_unit.py
